# morello-benchmarking

./: .gitignore  .gitmodules  make_config.sh  run.sh
aocl/: Dockerfile  aocl_bench.cpp  aocl_bench_f32.cpp  aocl_bench_u8s8s16.cpp  build_and_run.sh
eigen/: Dockerfile  build_and_run.sh  eigen_bench.cpp
gemma.cpp/decode/: Dockerfile
gemma.cpp/decode/gemma_tiny/: CMakeLists.txt  gemma.cc  gemma.h  ops.h  run_bench.cc
gemma.cpp/decode/gemma_tiny/compression/: analyze.h  compress-inl.h  nuq-inl.h  nuq_test.cc  sfp-inl.h  sfp_test.cc
intel-mkl/: Dockerfile  build_and_run.sh  mkl_bench_batch_parallel_f32.cpp  mkl_bench_batch_parallel_u8s8s32.cpp  mkl_bench_f32.cpp  mkl_bench_u8s8s32.cpp
morello/: Dockerfile  matmul_batch_parallel_x86_benchmarking.patch  matmul_x86_benchmarking.patch  matmul_x86_parameterized.rs  new_epi_matmul_x86.rs  openmp.patch  run_bench.sh  run_matmul_batch_parallel_x86_example.sh  run_matmul_x86_example.sh  run_matmul_x86_parameterized_example.sh  run_morello_example.sh  run_reformat.sh  softmax_3pass_synth.rs
morello-oneoff-matmul-u8s8s16/: program.c
morello-oneoff-matmul-u8s8s16/128/: Dockerfile  program.c
morello-oneoff-matmul-u8s8s16/64/: Dockerfile  program.c
openblas/: Dockerfile  build_and_run.sh  openblas_bench_batch_parallel_f32.cpp  openblas_bench_f32.cpp
torch/: Dockerfile  bench_torch.py
tvm/: Dockerfile  bench_tvm.py
xnnpack/: Dockerfile  build_and_run.sh  xnnpack_softmax_bench_f32.cpp
